# SmartMarketOOPS

./: .dockerignore  .env.docker  .env.docker.backup  .flake8  .gitignore  .npmrc  .taskmasterconfig  .windsurfrules  CODEBASE_CLEANUP_IMPLEMENTATION_PLAN.md  CODEBASE_CLEANUP_SUMMARY.md  COMPREHENSIVE_CODEBASE_ANALYSIS.md  COMPREHENSIVE_STATUS_REPORT.md  COMPREHENSIVE_TESTING_REPORT.md  DASHBOARD_FIXES_GUIDE.md  DEPLOYMENT_COMPLETE_SUMMARY.md  DEVELOPMENT_WORKFLOW.md  DOCKER_FIXES_REPORT.md  DOCKER_SETUP.md  FRONTEND_IMPLEMENTATION_COMPLETE.md  FRONTEND_IMPROVEMENT_WORKFLOW.md  LATEST_ACHIEVEMENTS_SUMMARY.md  LICENSE  M2_MACBOOK_OPTIMIZATION.md  MCP_SERVERS_SETUP.md  ML_TRAINING_SETUP.md  PHASE3_IMPLEMENTATION.md  PRD_SmartMarketOOPS.md  PRODUCTION_DEPLOYMENT_STATUS.md  README.md  README_DASHBOARD_LAUNCH.md  SMARTMARKETOOPS_LAUNCH_GUIDE.md  SYSTEM_STATUS_REPORT.md  SmartMarketOOPS_Free_Tier_Implementation_Plan.md  SmartMarketOOPS_Task_Breakdown.md  TASK_24_25_IMPLEMENTATION_SUMMARY.md  TASK_29_IMPLEMENTATION_SUMMARY.md  TASK_30_IMPLEMENTATION_SUMMARY.md  TASK_31_IMPLEMENTATION_SUMMARY.md  TASK_32_COMPLETION_REPORT.md  TESTING.md  (+57 more)
.cursor/: mcp.json
.next/: trace
.taskmaster/: config.json
analysis_execution_bridge/: __init__.py  main.py
backend/: .env.example  DATA_CONSISTENCY_FIX_SUMMARY.md  Dockerfile  README.md  debug-env.js  jest.config.js  next.config.js  nodemon.json  package.json  pg-test-user.js  simple-server.js  start-server.js  test-db-connection.js  test-delta-api.js  test-delta-simple.js  test-pg-connection.js  test-service-debug.js  test-service-direct.js  test-signature-compare.js  test-user.js  test.env  test_delta_service.js  test_trading_endpoints.py  test_working_service.js  tsconfig.json  tsconfig.tsbuildinfo
data_collection/: __init__.py  delta_exchange_client.py
docker/: Dockerfile.backend  Dockerfile.bridge  Dockerfile.frontend  Dockerfile.ml-system
docs/: AGENT_KNOWLEDGE_BASE.md  API_REFERENCE.md  CURRENT_DEPLOYMENT_STATUS.md  DELTA_EXCHANGE_PRODUCT_IDS.md  DEPLOYMENT.md  DEVELOPMENT.md  GIT_WORKFLOW.md  INSTALLATION_GUIDE.md  ROADMAP.md  TRADING_STRATEGY.md  TROUBLESHOOTING.md  ULTIMATE_SYSTEM_DOCS.md  apikey-security.md  bridge-api-system.md  deployment-guide.md  environment-setup.md  error-handling.md  (+4 more)
(+1547 files in other folders)
